--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">HealthFinal</string>
+    <string name="app_name">Get it Done</string>
+    <string name="settings">Settings</string>
+    <string name="stats">Stats</string>
+    <string name="nutrition">Nutrition</string>
 </resources>
